Мore metadata when saving the dataset (8batch)

--- a/Colab_Training_8batch.ipynb
+++ b/Colab_Training_8batch.ipynb
@@ -2309,6 +2309,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 31,
+      "metadata": {
+        "id": "PPybGiqyNObV"
+      },
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "colab": {
@@ -2464,7 +2473,21 @@
         "metadata = {\n",
         "    'title': KAGGLE_DATASET_NAME,\n",
         "    'id': f\"{KAGGLE_USERNAME}/{KAGGLE_DATASET_NAME}\",\n",
-        "    'licenses': [{'name': 'CC0-1.0'}] # ToDo: Use that license? What metadata?\n",
+        "    'licenses': [{'name': 'CC0-1.0'}], # ToDo: What license?\n",
+        "    'description': 'A Mistral 7B model finetuned to recover Gemma prompts based on the output. This model is trained on Google Colab and is used for our submission to https://www.kaggle.com/competitions/llm-prompt-recovery.',\n",
+        "    'subtitle': 'Finetuned Mistral 7B Model',\n",
+        "    'keywords': ['LLM', 'Prompt', 'Recovery', 'Mistral', 'Gemma'],\n",
+        "    'collaborators': ['Oliver Savolainen', 'Mark Bodracska', 'Valentina Lilova'],\n",
+        "    'resources': [\n",
+        "        # {\n",
+        "        #     'path': 'file1.csv',\n",
+        "        #     'description': 'Description of file1.csv contents.'\n",
+        "        # },\n",
+        "        # {\n",
+        "        #     'path': 'file2.csv',\n",
+        "        #     'description': 'Description of file2.csv contents.'\n",
+        "        # }\n",
+        "    ],\n",
         "}\n",
         "\n",
         "with open(os.path.join(KAGGLE_DATASET_PATH, 'dataset-metadata.json'), 'w') as f:\n",
