--- a/Colab_Training.ipynb
+++ b/Colab_Training.ipynb
@@ -445,7 +445,7 @@
       },
       "outputs": [],
       "source": [
-        "# Dataset credits to: \n",
+        "# Dataset credit to: https://www.kaggle.com/code/tomooinubushi/all-in-one-dataset-with-embedding\n",
         "df = pd.read_csv(TRAIN_FILE_PATH)"
       ]
     },
